[package]
name = "kvs"
version = "0.1.0"
authors = ["Nick Magerko <>"]
edition = "2018"

[dependencies]
bincode = "1.1.4"
failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
serde = "1.0.92"
serde_json = "1.0.39"
sled = "0.24.1"
stderrlog = "0.4.1"
structopt = "0.2.16"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
